--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.url=jdbc:h2:mem:test-db
 spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
 spring.config.import=optional:configserver:http://localhost:8888
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
